# hyperdiv-plotly-plugin

./: .gitignore  NOTICE  README.md  pyproject.toml
hyperdiv_plotly/: __init__.py  plotly_chart.py
hyperdiv_plotly/assets/: hyperdiv-plotly-plugin.js  plotly.css
