[tool.poetry]
name = "hyperdiv-plotly-plugin"
version = "0.1.0"
description = "Plotly charts plugin for Hyperdiv"
authors = ["Marius Nita <m@mariusnita.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["hyperdiv", "plotly", "charts", "plugin"]
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.9"
hyperdiv = ">=0.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
mypy = "^0.961"
ipython = "^8.4.0"
flake8 = "^7.0.0"
black = "^22.6.0"

[tool.pytest.ini_options]
addopts = "--cov=hyperdiv --cov-report=term-missing --capture=no --verbose"
testpaths = ["hyperdiv_plotly"]
python_files = ["*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">= 3.9"
